# maritimeco2

./: CITATION.cff  README.md  pyproject.toml
data/sample/: itaqui_liquid_bulk_2024_sample.csv
maritime_co2/: __init__.py  core.py  factors.py
notebooks/: 01_quickstart.ipynb
tests/: test_core.py
