[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime-co2"
version = "0.1.0"
description = "Estimate OPS-avoidable at-berth CO2 for liquid bulk (tanker) vessels, IMO Fourth GHG Study 2020 method (auxiliary engine only)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Darliane Ribeiro Cunha" }]
keywords = ["maritime", "co2", "emissions", "ports", "decarbonisation", "imo", "liquid-bulk", "tanker"]
dependencies = ["pandas>=1.3"]

[project.urls]
Homepage = "https://github.com/darlianecunha/maritime-co2"
